# TinyFrame

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
Builds/Android/: settings.gradle.kts
Builds/Android/app/: build.gradle.kts
Builds/Android/app/src/androidTest/java/com/SilentNight/TinyFrame/: ExampleInstrumentedTest.java
Builds/Android/app/src/main/: AndroidManifest.xml
Builds/Android/app/src/main/cpp/: CMakeLists.txt
Builds/Android/app/src/main/java/com/SilentNight/TinyFrame/: MainActivity.java
Builds/Android/app/src/main/res/values/: strings.xml  themes.xml
Builds/Android/app/src/main/res/values-night/: themes.xml
Builds/Android/app/src/test/java/com/SilentNight/TinyFrame/: ExampleUnitTest.java
Builds/Android/gradle/: libs.versions.toml
Builds/Android/gradle/wrapper/: gradle-wrapper.properties
Libs/: CMakeLists.txt
Libs/Internals/: CMakeLists.txt
Libs/Internals/TinyCore/: CMakeLists.txt
Libs/Internals/TinyCore/include/: TinyCore.h  TinyCore_Config.h
Libs/Internals/TinyCore/src/: utils.c
Libs/Internals/TinyCore/tests/: CMakeLists.txt  test_TinyCore.cpp
Scripts/Common/cmake/: cpack.cmake  cppcheck.cmake  ctest_config.cmake  dependencies.cmake  vcpkg.cmake
Scripts/Linux/: gen_prj_makefile.sh
Scripts/MacOS/: gen_prj_xcode.sh
Scripts/Web/: installEmsdk.bat  installEmsdk.sh
Scripts/Windows/: build_debug_prj_vs2019.bat  build_release_prj_vs2019.bat  gen_prj_vs2019.bat  gen_prj_vs2022.bat  packed_prj_nsis.bat  run_unit_tests_vs2019.bat
Sources/: CMakeLists.txt
Sources/Application/: CMakeLists.txt  main.cpp
